<resources>
    <string name="app_name">红领巾</string>
    <string name="login">登录</string>
    <string name="signin">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="phone">手机号</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="referee">推荐人</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
