<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#CCCCCC"
                    android:textCursorDrawable="@drawable/shape_edittext_cursor"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <android.support.design.widget.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#CCCCCC"
                    android:textCursorDrawable="@drawable/shape_edittext_cursor"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/selected_btn"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>