<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#CCCCCC"
                    android:textCursorDrawable="@drawable/shape_edittext_cursor"
                    android:textSize="16sp"/>


            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#CCCCCC"
                    android:textCursorDrawable="@drawable/shape_edittext_cursor"
                    android:textSize="16sp"/>


            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/verify_code">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/verify_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:longClickable="false"
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:textColorHint="#CCCCCC"
                        android:textCursorDrawable="@drawable/shape_edittext_cursor"
                        android:textSize="16sp"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_get_verify_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/selected_btn"
                    android:enabled="false"
                    android:gravity="center"
                    android:text="@string/get_verify_code"
                    android:textColor="#ffffff"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_referee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:drawableEnd="@drawable/register_up_img"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/register_up_img"
                android:text="我有推荐人"
                android:textColor="#a4000000"
                android:textSize="14sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_referee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="输入推荐人的手机号">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/referee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textColorHint="#CCCCCC"
                    android:textCursorDrawable="@drawable/shape_edittext_cursor"
                    android:textSize="16sp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/selected_btn"
                android:text="@string/signin"
                android:textColor="#ffffff"
                android:textSize="18sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="300dp"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>